src/components/Sidebar/Sidebar.css
.sidebar {
  font-family: 'Space Mono', monospace, sans-serif;

  max-width: 20rem;
  padding: 1.5rem;
}

.sidebar-container {
  display: flex;
  flex-direction: column;
  gap: 1rem 0;
  padding: 1rem 0;

  color: #fff;
}

.sidebar-logo {
  display: flex;
  align-items: center;
  gap: 10px;
}

.sidebar-content {
  display: flex;
  flex-direction: column;
  gap: 1rem 0;
}

.sidebar-cta {
  color: inherit;
  text-underline-offset: 2px;

  transition: color 150ms;
}

.sidebar-cta:hover {
  color: #00a6fb;
}

.sidebar-title {
  font-size: 2rem;
  font-weight: bold;
  text-decoration: none;
  color: #fff;
}

.highlighted {
  color: #00a6fb;
}

@media (min-width: 768px) {
  .sidebar {
    border-right: 2px solid rgba(194, 183, 183, 0.1);
  }

  .sidebar-container {
    position: sticky;
    top: 1.5rem;
    width: 20rem;
  }
}

